syntax = "proto3";
package task;

option go_package = "./task";

message CreateTaskRequest {
  string title = 1;
  string description =2;
  int32 priority = 3;
  int32 userId  = 4;
  string userName = 5;
}

message CreateTaskResponse {
  int32 taskId = 1;
}

service TaskService {
  rpc Create(CreateTaskRequest) returns (CreateTaskResponse);
}
